--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
-  <title>MERN Auth App</title>
+  <title>Muthoot Database Management</title>
 </head>
 
 <body>
